# nix-templates

./: .gitignore  README.md  flake.nix  treefmt.toml
.github/workflows/: check.yml
dev/: dev.envrc  flake-module.nix
dev/scripts/: check-flakes.sh
template/default/: .gitignore  flake.nix  treefmt.toml
template/default/.github/workflows/: check.yml
template/default/dev/: flake-module.nix
template/rust/: .gitignore  Cargo.toml  flake.nix
template/rust/dev/: flake-module.nix
